<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/editText_car_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_type_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/editText_car_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_make_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_car_type"
    />

    <EditText
        android:id="@+id/editText_car_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_model_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_car_model"
        />

    <EditText
        android:id="@+id/editText_car_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_year_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_car_make"
        />

    <Button
        android:id="@+id/button_submit_car_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit_label"
        app:layout_constraintTop_toBottomOf="@id/editText_car_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>